# Protocols

Protocols/: README.md
Protocols/Client/: CMakeLists.txt  settings.cmake
Protocols/Client/include/: AsyncTCPClient.hpp  HTTPClient.hpp  SyncTCPUDPClient.hpp
Protocols/Client/source/: main.cpp
Protocols/Server/: CMakeLists.txt
Protocols/Server/include/: HTTPServer.hpp  TCPServerAsyn.h  TCPServerSynIt.h  TCPServerSynPar.h
Protocols/Server/source/: main.cpp
